fix: flash messages alignment

--- a/src/app/static/css/forms.css
+++ b/src/app/static/css/forms.css
@@ -99,8 +99,8 @@ input[type="checkbox"] {
 }
 
 .form-login,
-.form-register{
-  align-items: baseline;
+.form-register {
+  align-items: center;
 }
 
 .form-create-album{
